<resources>
    <string name="app_name">Android Challenge W1</string>
<<<<<<< HEAD
    <string name="skip">Skip</string>
    <string name="welcome_to">Welcome to</string>
    <string name="food_hub">Food Hub</string>
    <string name="your_favourite_food">Your favourite foods delivered<br></br>fast at your door.</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="browse_your_menu">Browse your menu <br></br>and order directly</string>
    <string name="our_app_can_send">Our app can send you everywhere, even<br></br>space. For only $2.99 per month</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="your_email">Your E-mail</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE  </string>
    <string name="your_full_name">Your full name</string>
    <string name="i_dont_receive_a_code">I don&apos;t receive a code!</string>
    <string name="please_resend">Please resend</string>
    <string name="please_type_the_verification">Please type the verification code sent to<br></br>prelookstudio@gmail.com</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2<br></br>ABC</string>
    <string name="number_three">3<br></br>DEF</string>
    <string name="number_four">4<br></br>GHI</string>
    <string name="number_five">5<br></br>JKL</string>
    <string name="number_six">6<br></br>MNO</string>
    <string name="number_seven">7<br></br>PQRS</string>
    <string name="number_eight">8<br></br>TUV</string>
    <string name="number_nine">9<br></br>WXYZ</string>
=======

    <string name="facebook_button">FACEBOOK</string>
    <string name="google_button">GOOGLE  </string>


    <string name="activity_welcome_title">Welcome to</string>
    <string name="activity_food_hub">Food hub</string>
    <string name="activity_welcome_message">Your favourite foods delivered\nfast at your door.</string>
    <string name="activity_welcome_already_have_account">Already have an account?</string>
    <string name="activity_welcome_sign_in_underline"><u>Sign In</u></string>
    <string name="activity_welcome_start_button_message">Start with email or phone</string>
    <string name="activity_welcome_skip_button">Skip</string>

    <string name="activity_on_boarding_one_title">Browse your menu\nand order directly</string>
    <string name="activity_on_boarding_one_message">Our app can send you everywhere, even\nspace. For only $2.99 per month</string>

    <string name="activity_sign_up_title">Sign Up</string>
    <string name="activity_sign_up_full_name">Full name</string>
    <string name="activity_sign_up_email">E-mail</string>
    <string name="activity_sign_up_password">Password</string>
    <string name="activity_sign_up_full_name_hint">Your full name</string>
    <string name="activity_sign_up_email_hint">Your E-mail</string>
    <string name="activity_sign_up_button">Sign Up</string>
    <string name="activity_sign_up_already_have_account">Already have an account?</string>
    <string name="activity_sign_up_login">Login</string>
    <string name="activity_sign_up_sign_up_with">Sign up with</string>

    <string name="activity_sign_in_title">Login</string>
    <string name="activity_sign_in_email">E-mail</string>
    <string name="activity_sign_in_email_hint">Your E-mail</string>
    <string name="activity_sign_in_password">Password</string>
    <string name="activity_sign_in_forgot_password">Forgot password?</string>
    <string name="activity_sign_in_login_button">Login</string>
    <string name="activity_sign_in_dont_have_account">Don\'t have an account?</string>
    <string name="activity_sign_in_sign_up">Sign Up</string>
    <string name="activity_sign_in_sign_in_with">Sign in with</string>

    <string name="activity_verification_title">Verification Code</string>
    <string name="activity_verification_message">Please type the verification code sent to\nprelookstudio@gmail.com</string>
    <string name="activity_verification_dont_receive_code">I don\'t receive a code!</string>
    <string name="activity_verification_please_resend">Please resend</string>

    <string name="activity_verification_one_button">1</string>
    <string name="activity_verification_two_button">2\nABC</string>
    <string name="activity_verification_three_button">3\nDEF</string>
    <string name="activity_verification_four_button">4\nGHI</string>
    <string name="activity_verification_five_button">5\nJKL</string>
    <string name="activity_verification_six_button">6\nMNO</string>
    <string name="activity_verification_seven_button">7\nPQRS</string>
    <string name="activity_verification_eight_button">8\nTUV</string>
    <string name="activity_verification_nine_button">9\nWXYZ</string>
    <string name="activity_verification_zero_button">0</string>
>>>>>>> master

</resources>
    <!-- HTML ENTITIES
    & with &amp;
    > with &gt;
    < with &lt;
    " with &quot;, &ldquo; or &rdquo;
    ' with &apos;, &lsquo; or &rsquo;
    -->