<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signin"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/sofia_pro_semi_bold"
        android:text="@string/activity_sign_up_title"
        android:textColor="#000000"
        android:textSize="36.41sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sofia_pro_regular"
        android:text="@string/activity_sign_up_full_name"
        android:textColor="#9796A1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sofia_pro_regular"
        android:text="@string/activity_sign_up_email"
        android:textColor="#9796A1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/edt_email"
        app:layout_constraintTop_toBottomOf="@+id/edt_full_name" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sofia_pro_regular"
        android:text="@string/activity_sign_up_password"
        android:textColor="#9796A1"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_full_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_sign_up_full_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofia_pro_medium" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_sign_up_email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofia_pro_medium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/activity_sign_up_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofia_pro_medium"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/sofia_pro_medium"
        android:paddingHorizontal="80dp"
        android:paddingVertical="10dp"
        android:text="@string/activity_sign_up_button"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/sofia_pro_medium"
        android:lines="2"

        android:text="@string/activity_sign_up_already_have_account"
        android:textColor="#707070"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sofia_pro_medium"
        android:lines="2"
        android:text="@string/activity_sign_up_login"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

    <TextView
        android:id="@+id/tv_sign_up_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofia_pro_medium"
        android:text="@string/activity_sign_up_sign_up_with"
        android:textColor="#5B5B5E"
        android:textSize="14sp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_left_bar"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginEnd="20dp"
        android:background="#B3B3B3"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sign_up_with"
        app:layout_constraintEnd_toStartOf="@+id/tv_sign_up_with"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_sign_up_with" />

    <View
        android:id="@+id/view_right_bar"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginStart="20dp"
        android:background="#B3B3B3"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sign_up_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_sign_up_with"
        app:layout_constraintTop_toTopOf="@+id/tv_sign_up_with" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/sofia_pro_medium"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/facebook_button"
        app:backgroundTint="@color/white"
        android:textColor="#000000"
        app:icon="@drawable/icon_facebook"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view_left_bar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/sofia_pro_medium"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/google_button"
        android:textColor="#000000"
        app:icon="@drawable/icon_google"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view_right_bar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_facebook" />
</androidx.constraintlayout.widget.ConstraintLayout>